Added contact number

--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -47,7 +47,9 @@
                     <span class="white-font" style="font-variant: titling-caps;">Our Company</span><br/><br/>
                     <span class="orange-font"><a href="{% url 'store:our-purpose' %}">Our Purpose</a></span><br/>
                     <span class="orange-font"><a href="{% url 'store:return-policy' %}">Return Policy</a></span><br/>
-                    <span class="orange-font"><a href="{% url 'store:privacy-policy' %}">Privacy Policy</a></span>
+                    <span class="orange-font"><a href="{% url 'store:privacy-policy' %}">Privacy Policy</a></span><br/>
+                    <br/>
+                    <span class="orange-font">Need help? Call us! <br/><a style="color: inherit; text-decoration: none;" href="tel:+1-830-800-0385">(830) 800-0385</a></span>
                 </div>
                 <div class="offset-1 col-md-3 pt-md-5 pb-md-5">
                     <span class="white-font" style="font-variant: titling-caps;">Our Community</span><br/><br/>
@@ -58,8 +60,10 @@
                 </div>
             </div>
             {% endif %}
+
         </div>
     </section>
+
     <section class="text-center vintage-font orange-background">
         <div class="social-icons">
             <a href="https://www.facebook.com/Global-Vintage-Love-109096961408500" target="_blank"><i class="icon ion-social-facebook"></i></a>
