--- a/bespokeShipping/templates/bespoke_shipping.html
+++ b/bespokeShipping/templates/bespoke_shipping.html
@@ -234,7 +234,7 @@
         <div class="row">
             <div class="col-12">
                 <h2>Need Help?</h2>
-                <p>If you have any questions, please contact us at <a href="tel:+1-830-800-0385">(830) 800-0385</a></p>
+                <p>If you have any questions, please contact us at <a style="color: inherit; text-decoration: none;" href="tel:+1-830-800-0385">(830) 800-0385</a></p>
             </div>
         </div>
     </div>
