--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -22,7 +22,9 @@
                             <a class="dropdown-item dropdown-item-blue" href="{% url 'seller:product-list' %}">My Products</a>
                             <a class="dropdown-item dropdown-item-blue" href="{% url 'seller:add-product' %}">Add Product</a>
                             <a class="dropdown-item dropdown-item-blue" href="{% url 'products:qr-grid' %}">Product QR Grid</a>
+                            {% if user.is_staff %}
                             <a class="dropdown-item dropdown-item-blue" href="{% url 'bespoke-shipping:qr-grid' %}">Seller QR  Grid</a>
+                            {% endif %}
                         </div>
                     </li>
                     {% else %}
