Updates to support live change of delivery status via button click

--- a/deliveries/templates/assignments-view.html
+++ b/deliveries/templates/assignments-view.html
@@ -81,5 +81,5 @@
 {% endblock %}
 {% block end_body %}
     <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
-    <script src="{% static 'js/delivery_functions.js' %}"></script>
+    <script src="{% static 'js/delivery_functions_v1.0.0.1.js' %}"></script>
 {% endblock %}
