--- a/deliveries/templates/deliveries.html
+++ b/deliveries/templates/deliveries.html
@@ -91,5 +91,5 @@
 {% endblock %}
 {% block end_body %}
     <script src="{% get_static_prefix %}js/jquery-3.6.0.min.js"></script>
-    <script src="{% static 'js/delivery_functions.js' %}"></script>
+    <script src="{% static 'js/delivery_functions_v1.0.0.1.js' %}"></script>
 {% endblock %}
