Added To and From contacts.  Removed mis-matched tags.

--- a/deliveries/templates/deliveries.html
+++ b/deliveries/templates/deliveries.html
@@ -36,32 +36,64 @@
                         {% if delivery.pickup and delivery.shipping.must_go_to_barn == '0' %}
                         <td>Pickup</td>
                         <td>
-                            <p>{{ delivery.shipping.from_name }}</p>
-                            <p>{{ delivery.shipping.from_phone }}</p>
+                            <p>
+                                To:<br/>
+                                {{ delivery.shipping.to_name }}<br/>
+                                {{ delivery.shipping.to_phone }}
+                            </p>
+                            <p>
+                                From:<br/>
+                                {{ delivery.shipping.from_name }}<br/>
+                                {{ delivery.shipping.from_phone }}
+                            </p>
                         </td>
                         <td>{{ delivery.shipping.from_address }}</td>
-                        <td>{{ delivery.shipping.to_address }}</td></td>
+                        <td>{{ delivery.shipping.to_address }}</td>
                         {% elif delivery.pickup and delivery.shipping.must_go_to_barn != '0' %}
                         <td>Pickup</td>
                         <td>
-                            <p>{{ delivery.shipping.from_name }}</p>
-                            <p>{{ delivery.shipping.from_phone }}</p>
+                            <p>
+                                To:<br/>
+                                {{ delivery.shipping.to_name }}<br/>
+                                {{ delivery.shipping.to_phone }}
+                            </p>
+                            <p>
+                                From:<br/>
+                                {{ delivery.shipping.from_name }}<br/>
+                                {{ delivery.shipping.from_phone }}
+                            </p>
                         </td>
                         <td>{{ delivery.shipping.from_address }}</td>
-                        <td>Barn</td></td>
+                        <td>Barn</td>
                         {% elif not delivery.pickup and delivery.shipping.must_go_to_barn == '0' %}
                         <td>Delivery</td>
                         <td>
-                            <p>{{ delivery.shipping.to_name }}</p>
-                            <p>{{ delivery.shipping.to_phone }}</p>
+                            <p>
+                                To:<br/>
+                                {{ delivery.shipping.to_name }}<br/>
+                                {{ delivery.shipping.to_phone }}
+                            </p>
+                            <p>
+                                From:<br/>
+                                {{ delivery.shipping.from_name }}<br/>
+                                {{ delivery.shipping.from_phone }}
+                            </p>
                         </td>
-                        <td>{{ delivery.shipping.from_address }}</td></td>
+                        <td>{{ delivery.shipping.from_address }}</td>
                         <td>{{ delivery.shipping.to_address }}</td>
                         {% else %}
                         <td>Delivery</td>
                         <td>
-                            <p>{{ delivery.shipping.to_name }}</p>
-                            <p>{{ delivery.shipping.to_phone }}</p>
+                            <p>
+                                To:<br/>
+                                {{ delivery.shipping.to_name }}<br/>
+                                {{ delivery.shipping.to_phone }}
+                            </p>
+                            <p>
+                                From:<br/>
+                                {{ delivery.shipping.from_name }}<br/>
+                                {{ delivery.shipping.from_phone }}
+                            </p>
                         </td>
                         <td>Barn</td>
                         <td>{{ delivery.shipping.to_address }}</td>
