--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -8,7 +8,7 @@
                 </button>
             </div>
             <a class="navbar-brand d-none d-sm-block" href="{% url 'store:index' %}">
-                <img src="{% get_static_prefix %}img/logo.png" style="width: 102px;">
+                <img src="{% get_static_prefix %}img/logo.png" style="width: 102px;" alt="logo">
             </a>
             <a class="navbar-brand text-wrap vintage-font text-center" href="{% url 'store:index' %}">GLOBAL VINTAGE LOVE</a>
             <div class="collapse navbar-collapse navbar-collapse" id="navcol-1">
