--- a/products/templates/product-list-cards.html
+++ b/products/templates/product-list-cards.html
@@ -41,26 +41,33 @@
             </div>
         </div>
     </section>
-
+{{ max_pages }}
     <nav aria-label="Pagination Navigation">
     {% if product_pages.has_other_pages %}
         <ul class="pagination justify-content-center">
             {% if product_pages.has_previous %}
-              <li class="page-item">
-                  <a class="page-link" href="?page={{ product_pages.previous_page_number }}">Previous</a>
-              </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ product_pages.previous_page_number }}">Previous</a>
+                </li>
             {% else %}
-              <li class="page-item disabled">
-                  <span class="page-link">Previous</span>
-              </li>
+                <li class="page-item disabled">
+                    <span class="page-link">Previous</span>
+                </li>
             {% endif %}
 
-            {% for i in product_pages.paginator.page_range %}
-                  {% if product_pages.number == i %}
+            {% for i in show_pages %}
+                    {% if forloop.first and i != 1 %}
+                        <li class="page-item"><a class="page-link" href="?page=1">...</a></li>
+                    {% endif %}
+                    {% if product_pages.number == i %}
                         <li class="page-item active"><span class="page-link">{{ i }}</span></li>
-                  {% else %}
+                    {% else %}
                         <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                  {% endif %}
+                    {% endif %}
+
+                    {% if forloop.last and i < max_pages %}
+                        <li class="page-item"><a class="page-link" href="?page={{ max_pages }}">...</a></li>
+                    {% endif %}
             {% endfor %}
 
             {% if product_pages.has_next %}
