--- a/store/templates/privacy-policy.html
+++ b/store/templates/privacy-policy.html
@@ -368,7 +368,7 @@
                 <h4 class="orange-font">Exercising Your CCPA Data Protection Rights</h4>
                 <p>In order to exercise any of Your rights under the CCPA, and if You are a California resident, You can contact Us:</p>
                 <div style="margin-left: 3em">
-                    <p>By email: <a href="mailto:team@globalvintagelove.com">team@globalvintagelove.com</a></p>
+                    <p>By email: <a href="mailto:globalvintagelove@yahoo.com">globalvintagelove@yahoo.com</a></p>
                 </div>
                 <p>Only You, or a person registered with the California Secretary of State that You authorize to act on Your behalf, may make a verifiable request related to Your personal information.</p>
                 <p>Your request to Us must:</p>
@@ -439,7 +439,7 @@
             <section id="contact">
                 <h1 class="orange-font">Contact Us</h1>
                 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
-                <p>By email: <a href="mailto:team@globalvintagelove.com">team@globalvintagelove.com</a></p>
+                <p>By email: <a href="mailto:globalvintagelove@yahoo.com">globalvintagelove@yahoo.com</a></p>
             </section>
 
 
